# YG-Unikalizer

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  index.html  indigo-script.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mjs
.github/workflows/: auto-tag.yml  release.yml  tag-release.yml
docs/: ONLINE-GAMING.md
electron/: main.js  main.js.map  main.ts  preload.js  preload.js.map  preload.ts
native/: binding.gyp  package.json
native/src/: addon.cpp  gpu_hash.cpp  gpu_hash.h  hamming_index.cpp  hamming_index.h  image_hash.cpp  image_hash.h  ip_lookup.cpp  ip_lookup.h  meta_write.cpp  meta_write.h  wic_decode.cpp  wic_decode.h  xxhash.cpp
public/mobile/: index.html
public/wasm/: pu.wat
rust-native/: .gitignore  Cargo.toml  README.md  bench.js  index.d.ts  index.js  package-lock.json  package.json
rust-native/src/: lib.rs
scripts/: build-electron.js  build-native.js  build-rust.js  make-icons.js
server/: admin-events.jsonl  chat-server.js  chat-server.ts  game-server.js  game-server.ts  mobile-sync-server.js  mobile-sync-server.ts
src/: App.jsx  App.tsx  NewApp.tsx  OtherApp.tsx  RootApp.tsx  VideoApp.tsx  env.d.ts  i18n.js  i18n.ts  main.jsx  main.tsx  preload.d.ts  store.ts  styles.css
src/components/: AboutReadme.jsx  AdminPanel.jsx  AdminPanel.tsx  AnimatedBackground.tsx  AnimatedStats.tsx  AuthGate.jsx  AuthGate.tsx  BlackjackGame.tsx  ChangelogModal.tsx  Chat.jsx  Chat.tsx  CommandPalette.tsx  CountryFlag.tsx  CrashGame.tsx  CustomSelect.tsx  EnhancedStats.tsx  FeatureGate.tsx  FeatureGateCompact.tsx  (+32 more)
(+9 files in other folders)
